<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Expense Tracker</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm_prefix">Are you sure you want to </string>

    <!-- ExpenseClaim -->
    <string name="description">Description</string>
    <string name="dates">Dates</string>
    <string name="status">Status</string>
    <string name="expense_items">Expense Items</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_submitted">Submitted</string>
    <string name="status_approved">Approved</string>
    <string name="status_returned">Returned</string>
    <string name="incomplete">Incomplete</string>

    <!-- ExpenseItem -->
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="action_set_incomplete">Mark Item as Incomplete</string>

    <!-- EditingActivity -->
    <string name="cancel_label">Cancel</string>
    <string name="done_label">Done</string>

    <!-- ExpenseClaimListActivity -->
    <string name="action_add_claim">Add Claim</string>
    <string name="action_sort_claim">Sort Claim</string>
    <string name="action_user_settings">User Settings</string>
    <string name="action_delete_claim_confirm">Are you sure you want to delete this claim?</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_expenses">No expenses</string>
    <string name="no_destinations">No destinations</string>
    <string name="user_alert_title">Welcome, new user!</string>
    <string name="user_alert_message">Please enter your name.</string>
    <string name="user_alert_error">You must enter a name.</string>
    <string name="load_fail_error">Failed to load expense claims from server.</string>

    <!-- ExpenseClaim{Detail,Add}Activity -->
    <string name="detail_title">Detail</string>
    <string name="name_hint">Name</string>
    <string name="travel_reason_hint">Travel Reason</string>
    <string name="start_label">Start</string>
    <string name="end_label">End</string>
    <string name="action_add_destination">Add Destination</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_email">Email</string>
    <string name="action_mark_submitted">Mark as Submitted</string>
    <string name="action_mark_returned">Mark as Returned</string>
    <string name="action_mark_approved">Mark as Approved</string>
    <string name="action_add_comment">Add comment</string>
    <string name="action_delete_dest_confirm">Are you sure you want to delete this destination?</string>
    <string name="action_delete_item_confirm">Are you sure you want to delete this expense?</string>
    <string name="action_delete_tag_confirm">Are you sure you want to delete this tag?</string>

    <string name="toast_receipt_success">Receipt successfully saved.</string>
    <string name="toast_receipt_failed">Receipt failed to save.</string>
    <string name="toast_receipt_deleted">Receipt deleted.</string>
    <string name="toast_receipt_nonexistent">There is no saved receipt.</string>
    <string name="action_add_location">Add Location</string>

    <string name="sort_type">Type of Sort: </string>
    <string name="sort_order">Order of Sort: </string>
    <string name="user">User:&#160;</string>
    <string name="approver">Approver:&#160;</string>
    <string name="comments">Comments</string>
    <string name="amount_placeholder">0.00</string>
    <string name="total_label">Total</string>
    <string name="alert_submit_title">Submit Expense?</string>
    <string name="alert_submit_message">You still have incomplete expenses!</string>

    <!-- ExpenseClaimDetailController -->
    <string name="destinations_title">Destinations</string>
    <string name="tags_title">Tags</string>
    <string name="items_title">Expense Items</string>

    <!-- ManageTagsActivity -->
    <string name="title_activity_manage_tags">Manage Tags</string>
    <string name="action_add_tag">Add Tag</string>
    <string name="action_manage_tags">Manage Tags</string>
    <string name="action_edit">Edit</string>
    <string name="TagName">Your tag</string>
    <string name="action_new_tag">Add New Tag</string>
    <string name="action_accept">Add</string>
    <string name="title_activity_add_tag">Add a tag</string>
    <string name="title_activity_edit_tag">Edit Tag</string>

    <!-- ExpenseClaimSortActivity -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_geolocation_add">Add Geolocation</string>
    <string name="hello_world">Hello world!</string>


    <!-- CommentActivity -->
    <string name="comments_title">Comments</string>
    <string name="title_activity_comment_add">Add comment</string>

    <!-- Geolocation -->
    <string name="action_set_home">Set Home Location</string>
    <string name="action_current_location">Go To Current Location</string>

    <!-- FilterTagsActivity -->
    <string name="action_filter_tags">Filter Tags</string>
    <string name="title_activity_filter_tag">Filter Tags</string>

    <!-- ExpenseClaimSortActivity -->
    <string name="title_activity_tag_list">Tags</string>

    <!-- Tag{Add,Edit}ToClaimActivity -->
    <string name="title_activity_tag_edit_to_claim">Edit Tag</string>
    

    <!-- PlacePickerParentActivity -->
    <string name="places_unavailable_error">Unable to connect to Google Places</string>

    <!-- Destination{Add, Edit}Activity -->
    <string name="title_activity_destination_add">Add Destination</string>
	<string name="title_activity_destination_edit">Edit Destination</string>
    
    <!-- UserSettingsActivity -->
    <string name="title_activity_user_settings">User Settings</string>
    <string name="title_activity_user_settings_first_run">Welcome to Expense Tracker</string>
    <string name="home_location_hint">Home Location</string>
    <string name="fill_in_message">Please fill in the details below.</string>
    
    <!-- GPSFallbackController -->
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="current_location_button_title">Use Current Location</string>
    <string name="gps_alert_title">Enter GPS coordinates</string>
    <string name="gps_alert_message">A network connection is currently unavailable, so coordinates must be entered manually.</string>
    <string name="no_location_toast">Current location is unavailable</string>
    
    <!-- ExpenseClaimPagerAdapter -->
    <string name="tab_owned">Owned</string>
    <string name="tab_reviewal">Reviewal</string>
    
</resources>
