<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_hint"
        android:inputType="number|numberDecimal"
        android:labelFor="@id/et_latitude"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/longitude_hint"
        android:inputType="number|numberDecimal"
        android:labelFor="@id/et_longitude"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/btn_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/current_location_button_title" />

</LinearLayout>