<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    tools:context="com.indragie.cmput301as1.ExpenseItemAddActivity">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <EditText
	        android:id="@+id/et_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/name_hint" />
	
	    <EditText
	        android:id="@+id/et_description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="18dp"
	        android:ems="10"
	        android:hint="@string/description"
	        android:inputType="textMultiLine" />
	    
	    <EditText
	        android:id="@+id/et_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="18dp"
	        android:ems="10"
	        android:hint="@string/action_add_location"
	        android:inputType="textMultiLine" />
	
	    <Spinner
	        android:id="@+id/sp_category"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal" >
	
	        <Spinner
	            android:id="@+id/sp_currency"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	        <EditText
	            android:id="@+id/et_amount"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:hint="@string/amount"
	            android:inputType="number|numberDecimal"
	            android:labelFor="@id/et_amount"
	            android:selectAllOnFocus="true"
	            android:text="@string/amount_placeholder" />
	    </LinearLayout>
	
	    <com.indragie.cmput301as1.DateEditText
	        android:id="@+id/et_date"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:gravity="center_horizontal"
	        android:labelFor="@id/et_date" />
	
	    <ImageButton
	        android:id="@+id/btn_receipt"
	        android:layout_marginTop="15dp"
	        android:layout_width="200dp"
	        android:layout_height="260dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_weight="1"
	        android:scaleType="centerCrop"
	        android:adjustViewBounds="true"
	        android:src="@drawable/receipt_camera" />
	
	</LinearLayout>
</ScrollView>